src/test/ui/feature-gates/feature-gate-optin-builtin-traits.stderr
error[E0658]: auto traits are experimental and possibly buggy (see issue #13231)
  --> $DIR/feature-gate-optin-builtin-traits.rs:20:1
   |
LL | auto trait AutoDummyTrait {}
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^
   |
   = help: add #![feature(optin_builtin_traits)] to the crate attributes to enable

error[E0658]: negative trait bounds are not yet fully implemented; use marker types for now (see issue #13231)
  --> $DIR/feature-gate-optin-builtin-traits.rs:23:1
   |
LL | impl !DummyTrait for DummyStruct {}
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
   |
   = help: add #![feature(optin_builtin_traits)] to the crate attributes to enable

error: aborting due to 2 previous errors

For more information about this error, try `rustc --explain E0658`.
